expert can't create and edit classes
